; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_mbedtls_ssl_conf_ciphersuites.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_mbedtls_ssl_conf_ciphersuites.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32** }

@MBEDTLS_SSL_MINOR_VERSION_0 = common dso_local global i64 0, align 8
@MBEDTLS_SSL_MINOR_VERSION_1 = common dso_local global i64 0, align 8
@MBEDTLS_SSL_MINOR_VERSION_2 = common dso_local global i64 0, align 8
@MBEDTLS_SSL_MINOR_VERSION_3 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mbedtls_ssl_conf_ciphersuites(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32**, i32*** %7, align 8
  %9 = load i64, i64* @MBEDTLS_SSL_MINOR_VERSION_0, align 8
  %10 = getelementptr inbounds i32*, i32** %8, i64 %9
  store i32* %5, i32** %10, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32**, i32*** %13, align 8
  %15 = load i64, i64* @MBEDTLS_SSL_MINOR_VERSION_1, align 8
  %16 = getelementptr inbounds i32*, i32** %14, i64 %15
  store i32* %11, i32** %16, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32**, i32*** %19, align 8
  %21 = load i64, i64* @MBEDTLS_SSL_MINOR_VERSION_2, align 8
  %22 = getelementptr inbounds i32*, i32** %20, i64 %21
  store i32* %17, i32** %22, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32**, i32*** %25, align 8
  %27 = load i64, i64* @MBEDTLS_SSL_MINOR_VERSION_3, align 8
  %28 = getelementptr inbounds i32*, i32** %26, i64 %27
  store i32* %23, i32** %28, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
